# Statistical-Prediction-Modelling-Application

./: ARFFtoData.cpp  ARFFtoData.h  EPL-13-03-2020.arff  EPL-MATCHES.arff  Matrix.cpp  Matrix.h  README.md  settings.gradle
app/: Arff_data.cpp  Arff_data.h  CMakeLists.txt  Cpp2java.cpp  Cpp2java.h  LinProgSol.cpp  build.gradle
app/android/widget/: annotations.xml
app/src/androidTest/java/com/example/statisticalpredictionmodellingapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: LeagueData.db  README.md
app/src/main/java/com/example/statisticalpredictionmodellingapplication/: AddLeagueData.java  AddNewData.java  Display_Results.java  LinProgSol.h  Loading.java  MainActivity.java  ReadMeActivity.java  Results.java  Season.java  arff_file.java
app/src/main/java/com/example/statisticalpredictionmodellingapplication/Kotlin/: Feasible.kt  Matrix.kt
app/src/main/java/com/example/statisticalpredictionmodellingapplication/ui/main/: PageViewModel.java  PlaceholderFragment.java  SectionsPagerAdapter.java
app/src/main/res/layout/: activity_add_league_data.xml  activity_add_new_data.xml  activity_display__results.xml  activity_loading.xml  activity_main.xml  activity_read_me.xml  activity_results.xml  add_match.xml  add_team.xml  fragment_main.xml
app/src/main/res/layout-v21/: activity_results.xml
app/src/main/res/menu/: menu_results_page.xml
app/src/main/res/values/: preloaded_fonts.xml  strings.xml
app/src/test/java/com/example/statisticalpredictionmodellingapplication/: ExampleUnitTest.java
(+1 files in other folders)
